# panel-one

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  README.md  client.py  cloudbuild.yaml  config.py  deploy.sh  imagegen_prompt.md  pyproject.toml  run_worker.py  run_worker.sh  schemas.py  server.py  setup_gcs.py  storage.py  story_prompt.md  utils.py  worker.py
frontend/: Dockerfile  cloudbuild.yaml  deploy.sh  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/proxy-image/: route.ts
frontend/src/components/: ErrorState.tsx  ProgressTimeline.tsx  ResultView.tsx  UploadZone.tsx
frontend/src/hooks/: usePanelGenerator.ts
frontend/src/types/: index.ts
prompts/: back.md  front.md  imagegen_prompt.md  script.md  story_prompt.md
script/: README.md  main.py  pyproject.toml
script/sample_output/: story.txt
